[gd_scene load_steps=5 format=2]

[ext_resource path="res://font/GODOFWAR.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://Interface.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 1 )

[node name="Interface" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Mensaje" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -279.5
margin_right = 279.5
margin_bottom = 139.0
custom_fonts/font = SubResource( 1 )
text = "Violeta Game"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BotonInicio" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -175.0
margin_right = 100.0
margin_bottom = -65.0
custom_fonts/font = SubResource( 2 )
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mensajeTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
[connection signal="pressed" from="BotonInicio" to="." method="_on_BotonInicio_pressed"]
[connection signal="timeout" from="mensajeTimer" to="." method="_on_mensajeTimer_timeout"]
